syntax = "proto3";
option go_package = "./pb";

package pb;
import "model_node_grant.proto";

service NodeGrantService {
	// 创建认证
	rpc createNodeGrant (CreateNodeGrantRequest) returns (CreateNodeGrantResponse);

	// 修改认证
	rpc updateNodeGrant (UpdateNodeGrantRequest) returns (UpdateNodeGrantResponse);

	// 禁用认证
	rpc disableNodeGrant (DisableNodeGrantRequest) returns (DisableNodeGrantResponse);

	// 计算认证的数量
	rpc countAllEnabledNodeGrants (CountAllEnabledNodeGrantsRequest) returns (CountAllEnabledNodeGrantsResponse);

	// 列出单页认证
	rpc ListEnabledNodeGrants (ListEnabledNodeGrantsRequest) returns (ListEnabledNodeGrantsResponse);

	// 列出所有认证
	rpc FindAllEnabledNodeGrants(FindAllEnabledNodeGrantsRequest) returns (FindAllEnabledNodeGrantsResponse);

	// 获取单个认证信息
	rpc FindEnabledGrant(FindEnabledGrantRequest) returns (FindEnabledGrantResponse);
}

// 创建节点认证
message CreateNodeGrantRequest {
	string name = 1;
	string method = 2;
	string username = 3;
	string password = 4;
	string privateKey = 5;
	string description = 6;
	int64 nodeId = 7;
}

message CreateNodeGrantResponse {
	int64 grantId = 1;
}

// 修改节点认证
message UpdateNodeGrantRequest {
	int64 grantId = 8;
	string name = 1;
	string method = 2;
	string username = 3;
	string password = 4;
	string privateKey = 5;
	string description = 6;
	int64 nodeId = 7;
}

message UpdateNodeGrantResponse {

}

// 禁用节点认证
message DisableNodeGrantRequest {
	int64 grantId = 1;
}

message DisableNodeGrantResponse {

}

// 计算节点认证数量
message CountAllEnabledNodeGrantsRequest {

}

message CountAllEnabledNodeGrantsResponse {
	int64 count = 1;
}

// 列出单页认证
message ListEnabledNodeGrantsRequest {
	int64 offset = 1;
	int64 size = 2;
}

message ListEnabledNodeGrantsResponse {
	repeated NodeGrant grants = 1;
}

// 获取所有认证信息
message FindAllEnabledNodeGrantsRequest {

}

message FindAllEnabledNodeGrantsResponse {
	repeated NodeGrant grants = 1;
}

// 获取认证信息
message FindEnabledGrantRequest {
	int64 grantId = 1;
}

message FindEnabledGrantResponse {
	NodeGrant grant = 1;
}